# starter

./: .dockerignore  .gitignore  MakeFile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json  pyproject.toml  scripts.txt
app/: manage.py
app/common/: admin.py  models.py  widgets.py
app/config/: asgi.py  celery.py  urls.py  wsgi.py
app/config/settings/: base.py  div.py  internationalization.py  prod.py
app/dashboard/: urls.py  views.py
app/db_logger/: admin.py  apps.py  db_log_handler.py  models.py
app/db_logger/migrations/: 0001_initial.py
app/fontawesome_6/: app_settings.py  forms.py  widgets.py
app/fontawesome_6/templatetags/: fontawesome_6.py
app/notifications/: admin.py  functions.py  models.py  translation.py  urls.py  views.py
app/notifications/migrations/: 0001_initial.py  0002_initial.py
app/static/: background.avif
app/static/css/: input.css  project.css  select2theme.css
app/static/js/: convertS2.js  convertS2andS2Fontawesome_6.js
app/templates/: base.html  dummy.html
app/templates/cotton/: fieldErr.html  frmErr.html  saveCancel.html
app/templates/dashboard/: dashboard.html
app/templates/notification/: notification.html
app/templates/users/: base.html  changePassword.html  index.html  login.html  profile.html
app/users/: admin.py  forms.py  models.py  signals.py  translation.py  urls.py  views.py
compose/django/: Dockerfile  entrypoint.sh
compose/nginx/: nginx.conf
environement/dev/: .pgAdmin  .postgres  .rabbitmq
environement/prod/: .django  .postgres  .rabbitmq
(+4 files in other folders)
